--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,5 @@
-alembic==1.13.1
-annotated-types==0.6.0
-anyio==4.3.0
-asn1crypto==1.5.1
-astroid==3.1.0
-asttokens==2.4.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-blinker==1.8.2
-blis==0.7.11
-boto3==1.34.91
-botocore==1.34.91
-catalogue==2.0.10
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.18.1
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-cryptography==42.0.5
-cymem==2.0.8
-debugpy==1.8.2
-decorator==5.1.1
-dill==0.3.8
-dnspython==2.6.1
-ecdsa==0.19.0
-email_validator==2.1.1
-executing==2.0.1
-fastapi==0.110.1
 Flask==3.0.3
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.7
-ipykernel==6.29.5
-ipython==8.26.0
-isort==5.13.2
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-langcodes==3.4.0
-language_data==1.2.0
-Mako==1.3.3
-marisa-trie==1.2.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdurl==0.1.2
-murmurhash==1.0.10
-nest-asyncio==1.6.0
-nltk==3.8.1
-numpy==1.26.4
-opencv-python==4.9.0.80
-orjson==3.10.1
-packaging==24.1
-parso==0.8.4
-passlib==1.7.4
-pg8000==1.30.4
-platformdirs==4.2.1
-plyer==2.1.0
-preshed==3.0.9
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure_eval==0.2.3
-pyasn1==0.6.0
-PyAudio==0.2.14
-pycparser==2.22
-pydantic==2.7.0
-pydantic-extra-types==2.7.0
-pydantic-settings==2.2.1
-pydantic_core==2.18.1
-Pygments==2.18.0
-pylint==3.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.9
-pyttsx3==2.90
-PyYAML==6.0.1
-pyzmq==26.0.3
-regex==2024.5.15
 requests==2.32.3
-rich==13.7.1
-rsa==4.9
-s3transfer==0.10.1
-scramp==1.4.5
-setuptools==70.3.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.4
-sniffio==1.3.1
-soupsieve==2.5
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.10.4
-SQLAlchemy==2.0.27
-srsly==2.4.8
-stack-data==0.6.3
-starlette==0.37.2
-thinc==8.2.5
-tomlkit==0.12.4
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-typer==0.12.3
-typing_extensions==4.11.0
-ujson==5.9.0
-urllib3==2.2.1
-uvicorn==0.29.0
-wasabi==1.1.3
-watchfiles==0.21.0
-wcwidth==0.2.13
-weasel==0.4.1
-websockets==12.0
-Werkzeug==3.0.3
-wrapt==1.16.0
+Jinja2==3.1.3
+pydantic==2.7.0
+pydantic-core==2.18.1
